Cleanup and Create Table Refactor in the Factory

--- a/.dbeaver/project-metadata.json
+++ b/.dbeaver/project-metadata.json
@@ -1,1 +1,1 @@
-{"resources":{"Scripts/Script.sql":{"default-schema":"pareto","default-datasource":"postgres-jdbc-1985b6e7f00-3c7965e56ca91e7e","default-catalog":"norpac"}}}
+{"resources":{}}
