--- a/.dbeaver/project-metadata.json
+++ b/.dbeaver/project-metadata.json
@@ -1,1 +1,1 @@
-{"resources":{}}
+{"resources":{"Scripts/Script.sql":{"default-datasource":"postgres-jdbc-1985b6e7f00-3c7965e56ca91e7e","default-catalog":"norpac","default-schema":"public"}}}
