DBeaver Project Updates

--- a/.dbeaver/credentials-config.json
+++ b/.dbeaver/credentials-config.json
@@ -1,1 +1,1 @@
-Úq'oyøõg“•DªÑ¢?™=m„Û©DC”Æ£]š^‡Y$Ö"·®hI*-	?Kz#Žiæ×wˆœì»ÛçœD“]Â£‚—ñm rð{#'T‘º>†•ÝÌXRßoß¡”-t=–AúõygÀ:O×Pó=NOÑ¯}}eïÞMA3£
+<úQÅ¨àçqxÒEú€CÒaÿ	O[ìW¿z†UO¶*á~ýËI«ÞƒD‹l3Áò ›&Ñ2Wõwh"zTÄÙjÜTÅœc²3y0»ø%¬dPC+nZª1úûpBH°Le•C@hð»GÉ0±0‹Ì?õ„ÓÜdPû|J<P°(Ðð¹ØÏa±ïß<hƒeÐÌø‡â¸K*cáÑÎ,=û˜gz“ß»"Áöbþýj"1)‹”èÄË@eƒS§Yý§ŠØˆªk±3ÿÔÎÆÍ£FüûœÛ]Ý¼ìÂÍ¼Û ¤ê¦†‘Þ
